# veles-finance-agent

./: .dockerignore  .env.development  .env.production  .gitattributes  .gitignore  .vercelignore  Modelfile.veles  README.md  README_MCP.md  RELEASE_CHECKLIST.md  SETUP_ORCHESTRATOR.md  baseline_test.py  benchmark.py  benchmark_report.txt  benchmark_results.json  fincot_generator.py  fly.toml  gateway.py  main.py  mcp_server.py  miner_agent.py  pyproject.toml  readme.md  requirements.txt  runpod_finetune.sh  runpod_veles_start.sh  server.json  test_adapter.py  test_x402_payment.py  tests_batch2.py  tests_cross_table.py  tests_orchestrator.py  tests_real_10k.py  train_v2.py  unsloth_qlora.py  update_test_cases.py  vercel.json
.github/workflows/: docker-publish.yml  publish-mcp.yml
agent/: graph.py  sec_tool.py  tools.py  trader_tools.py
deploy/: Dockerfile  Dockerfile.gateway  docker-compose.sglang.yml  entrypoint.sh  merge_veles.py  runpod_sglang.sh  sync_to_runpod.sh
mcp_server/: README.md  pyproject.toml
mcp_server/veles_finance_mcp/: __init__.py  server.py
model_card/: README.md
pipeline/: __init__.py  collect.py  config.py  deploy.py  eval.py  run_pipeline.py  test_cases.jsonl  train.py
pipeline/reports/: extraction_baseline_llama_3.3_70b_versatile.json
static/: _ds_bundle.js  index.html  llms.txt  styles.css  x402.json
template/: .env.example  AGENTS.md  DEPLOYMENT.md  Makefile  Modelfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py  test_agent.py  test_learning_loop.py  test_live_payment.py  test_market_data.py  test_payment_flow.py  test_s3_audit.py  test_sandbox.py  test_security.py  test_token_efficiency.py
template/.github/workflows/: deploy.yaml
template/alembic/versions/: a1b2c3d4e5f6_add_conversation_log.py
template/app/: main.py
template/app/core/: audit_logger.py  config.py  intent_validator.py  observability.py  payment.py  pii_shield.py
template/app/domain/: __init__.py  delayed_binding.py  job_status.py
template/demo/: app.py
template/docs/: getting-started.md
template/logs/: episodic_memory.db
template/scripts/: docker-entrypoint.sh  run_eval_batch.py
tokens/: fonts.css  spacing.css  typography.css
ui_kits/veles-chat/: Aurora.jsx  ChatScreen.jsx  README.md  RightPanel.jsx  Sidebar.jsx  ThinkingViz.jsx  index.html  veles-chat-local.html  veles-chat-single.html
(+80 files in other folders)
