[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veles-finance-mcp"
version = "1.0.1"
description = "MCP server for Veles Finance Agent — AI-powered financial analysis via x402 micropayments (USDC on Base)"
readme = "README_MCP.md"
license = { text = "MIT" }
authors = [{ name = "Veles Finance", email = "lilbusinesspurp@gmail.com" }]
keywords = ["mcp", "finance", "x402", "ai", "usdc", "llm", "financial-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
autopay = ["x402>=0.1.0"]

[project.scripts]
veles-finance-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://veles-finance-gateway.fly.dev"
Repository = "https://github.com/dreyich/finance-ai-agent"
Documentation = "https://veles-finance-gateway.fly.dev/llms.txt"

[tool.hatch.build.targets.wheel]
only-include = ["mcp_server.py", "README_MCP.md"]

[tool.hatch.build.targets.sdist]
only-include = ["mcp_server.py", "README_MCP.md", "pyproject.toml"]
