[project]
name = "veles-finance-mcp"
version = "0.1.0"
description = "Veles Finance Agent MCP server — institutional DD reports for Claude Desktop, Cursor, Windsurf"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["finance", "due-diligence", "mcp", "claude", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.scripts]
veles-finance-mcp = "veles_finance_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["veles_finance_mcp"]
